--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0abab0">
+    
     <title>PWA_test</title>
+
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="images/monkey_192.png">
 </head>
 <body>
-    
+    <h1>Test PWA 2</h1>
+    <audio controls>
+        <source src="Hey.mp3" type="audio/mp3">
+    </audio>
+
+    <script src="script/script.js"></script>
 </body>
 </html>
