--- a/index.html
+++ b/index.html
@@ -14,15 +14,7 @@
 </head>
 
 <body>
-    <h1>Test PWA 3</h1>
-    <audio controls>
-        <source src="Hey.mp3" type="audio/mp3">
-    </audio>
-    <iframe width="1520" height="570" src="https://www.youtube.com/embed/vaGZapAGvwM"
-        title="I built my own computer. by hand." frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen>
-    </iframe>
+    <button></button>
 
     <script src="script/script.js"></script>
 </body>
