--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-    <button></button>
+    <button ondblclick="test()"></button>
 
+
+    <script src="script/prova_dir.js"></script>
     <script src="script/script.js"></script>
 </body>
 
