--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <button ondblclick="test()"></button>
+    <button onclick="alert('__'); test()"></button>
 
 
     <script src="script/prova_dir.js"></script>
