--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-    <button onclick="test()"></button>
+    <form class="center_el" id="fileForm">
+        <input type="file" id="fileInput" onchange="handleFileSelect()">
+    </form>
 
 
     <script src="script/prova_dir.js"></script>
