--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <form class="center_el" id="fileForm">
-        <input type="file" id="fileInput" onchange="handleFileSelect()">
+        <input type="file" id="fileInput" onchange="handleFileSelect()" multiple="multiple">
     </form>
 
 
